--- a/public/templates/activities.html
+++ b/public/templates/activities.html
@@ -3,7 +3,7 @@
 		<div class='col-sm-10'>
 			<h2 class='text-orange'>Details</h2>
 		</div>
-		<div class='col-sm-2' ng-show='iSvc.isAuthenticated()'>
+			<div class='col-sm-2' ng-show='iSvc.isAuthorized("admin")'>
 			<a class='btn btn-success btn-block' href="/#/newActivity" role="button">Neu</a>
 		</div>
 	</div>
