location for events

--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -20,7 +20,7 @@
 					</a>
 				</div>
 				<div class='col-sm-9'>
-					<strong>{{event.name}}</strong>
+					<strong>{{event.location}} - {{event.name}}</strong>
 					<div class='text-info'>{{event.startDate | date: 'dd/MM/yyyy'}} - {{event.endDate | date: 'dd/MM/yyyy'}}</div>
 					<p>{{event.description}}</p>
 				</div>
