--- a/public/templates/myRegistrations.html
+++ b/public/templates/myRegistrations.html
@@ -1,5 +1,6 @@
 <div class='container'>
-	<h2 class='text-orange'>Meine Reservierungen</h2>
+	<h2 class='text-orange'>Erfolgreiche Reservierungen</h2>
+	<h3><span class='label label-default'>Einzahlungsschein wird mittels Email bis Ende April zugesandt. Vielen Dank für Ihre Anmeldung.</span></h3>
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
 	<table class='table table-striped table-bordered'>
 		<tr>
