--- a/public/templates/registration.html
+++ b/public/templates/registration.html
@@ -73,7 +73,7 @@
 	</div>
 	<div class="panel panel-default">
 	<!-- JUNGBLÄSERWOCHE -->
-  <div class="panel-heading text-orange">Information nur für Jungbläserwochen</div>
+  <div class="panel-heading text-orange"><strong>Information nur für Jungbläserwochen</strong></div>
   <div class="panel-body">
 		<div class='form-group' ng-class='{ "has-error": registrationForm.bandName.$invalid }'>
 			<label for='bandName' class='control-label col-sm-2'>Musikkapelle</label>
