--- a/public/templates/registrationEdit.html
+++ b/public/templates/registrationEdit.html
@@ -77,6 +77,29 @@
 			<textarea name='healthChild' ng-model='healthChild' rows='3' maxlength='350' class='form-control'></textarea>
 		</div>
 	</div>
+	<div class="panel panel-default">
+	<div class="panel-heading text-orange"><strong>Information nur für Jungbläserwochen</strong></div>
+  <div class="panel-body">
+		<div class='form-group' ng-class='{ "has-error": registrationForm.bandName.$invalid }'>
+			<label for='bandName' class='control-label col-sm-2'>Musikkapelle</label>
+			<div class='col-sm-10'>
+				<input name='bandName' type='text' ng-model='bandName' maxlength="100" class='form-control'></textarea>
+			</div>
+		</div>
+		<div class='form-group' ng-class='{ "has-error": registrationForm.instrument.$invalid }'>
+			<label for='instrument' class='control-label col-sm-2'>Instrument</label>
+			<div class='col-sm-10'>
+				<input name='instrument' type='text' ng-model='instrument' maxlength="100" class='form-control'></textarea>
+			</div>
+		</div>
+		<div class='form-group' ng-class='{ "has-error": registrationForm.bandName.$invalid }'>
+			<label for='instrumentYears' class='control-label col-sm-2'>Ausbildungsjahr</label>
+			<div class='col-sm-10'>
+				<input name='instrumentYears' type='text' ng-model='instrumentYears' maxlength="100" class='form-control'></textarea>
+			</div>
+		</div>
+  </div>
+</div>
 	<div class='text-orange'><strong>Notfallkontakte:</strong></div>
 	<!-- NAMECONTACT1 TELCONTACT1 -->
 	<div class='form-group'>
