--- a/public/templates/userNew.html
+++ b/public/templates/userNew.html
@@ -1,5 +1,5 @@
 <div class='container'>
-<h2 class='text-orange'>Neuen User erstellen</h2>
+<h2 class='text-orange'>Neuen User erstellen / Angaben zu den Eltern</h2>
 <form name='eventForm' class='form-horizontal' novalidate ng-submit='addUser(firstName, lastName, userTel, userEmail, userName, pwd)'>
     <div class='form-group' ng-class='{ "has-error": eventForm.firstName.$invalid }'>
     <label for='firstName' class='control-label col-sm-2'>Vorname</label>
