--- a/public/templates/registrationEdit.html
+++ b/public/templates/registrationEdit.html
@@ -78,7 +78,7 @@
 		</div>
 	</div>
 	<div class="panel panel-default">
-	<div class="panel-heading text-orange"><strong>Information nur für Jungbläserwochen</strong></div>
+	<div class="panel-heading text-orange"><strong>Auszüllen nur bei Anmeldung für die Tschögglberger Jungbläserwochen</strong></div>
   <div class="panel-body">
 		<div class='form-group' ng-class='{ "has-error": registrationForm.bandName.$invalid }'>
 			<label for='bandName' class='control-label col-sm-2'>Musikkapelle</label>
