--- a/public/templates/registrationEdit.html
+++ b/public/templates/registrationEdit.html
@@ -65,7 +65,7 @@
 	</div>
 	<!-- SCHOOLCHILD -->
 	<div class='form-group' ng-class='{ "has-error": registrationForm.schoolChild.$invalid }'>
-		<label for='schoolChild' class='control-label col-sm-2'>Besuchte Klasse/Instrument</label>
+		<label for='schoolChild' class='control-label col-sm-2'>Besuchte Klasse</label>
 		<div class='col-sm-10'>
 			<input name='schoolChild' type='text' ng-model='schoolChild' required maxlength='100' class='form-control'></input>
 		</div>
