--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,13 +1,15 @@
 <div class='navbar-right' ng-controller='LoginCtrl'>
 	<form class='navbar-form' ng-hide='identity.isAuthenticated()'>
 		<div class='form-group'>
-			<input id='login_user' type='text' class='form-control' ng-model='username' placeholder='User'> 
+			<input id='login_user' type='text' class='form-control' ng-model='username' placeholder='User'>
 		</div>
 		<div class='form-group'>
 			<input id='login_pwd' type='password' class='form-control' ng-model='password' placeholder='Passwort'>
 		</div>
 		<button class='btn btn-warning' ng-click='signin(username, password)'>Anmelden</button>
 		<a id='login_newUser' href='/#/user' class='btn btn-warning' role='button'>Neuer User</a>
+		<br />
+		<a href='/#/userToken' class='btn btn-link' role='button'>Passwort vergessen?</a>
 	</form>
 
 	<ul class='nav navbar-nav navbar-right' ng-show='identity.isAuthenticated()'>
