--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -1,23 +1,29 @@
 <div class='container'>
-	<div class='container col-sm-9'>
+	<div class='container col-sm-10'>
 	<div class='panel panel-default'>
 	<div class='panel-heading'>Filter</div>
 	<div class='row panel-body'>
 		<label for='eventFilter' class='control-label col-sm-1'>Progr.:</label>
-		<div class='col-sm-3'>
+		<div class='col-sm-3 form-group'>
 			<select id='eventFilter' class='form-control' ng-model='eventIdFilter'>
 				<option ng-repeat='event in events' value='{{event._id}}'>{{event.name}}</option>
 			</select>
 		</div>
+		<div class='col-sm-1 form-group'>
+			<div class='btn btn-info' ng-click='clearEventSelection()'><span class="glyphicon glyphicon-remove"></span></div>
+		</div>
 		<label for='activityFilter' class='control-label col-sm-1'>Woche:</label>
-		<div class='col-sm-3'>
+		<div class='col-sm-3 form-group'>
 			<select id='activityFilter' class='form-control' ng-model='activityIdFilter'>
 				<option ng-repeat='activity in activities' value='{{activity._id}}'>{{activity.name}}</option>
 			</select>
 		</div>
-        <div class='col-sm-1'>
-            <button type='button' class='btn btn-primary' ng-click='getReportData()'>Laden</button>
-        </div>
+		<div class='col-sm-1 form-group'>
+			<div class='btn btn-info' ng-click='clearActivitySelection()'><span class="glyphicon glyphicon-remove"></span></div>
+		</div>
+    <div class='col-sm-1'>
+      <button type='button' class='btn btn-primary' ng-click='getReportData()'>Laden</button>
+  	</div>
 	</div>
 	</div>
 	</div>
