--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -5,7 +5,7 @@
 	<div class='row panel-body'>
 		<label for='eventFilter' class='control-label col-sm-1'>Progr.:</label>
 		<div class='col-sm-3 form-group'>
-			<select id='eventFilter' class='form-control' ng-model='eventIdFilter'>
+			<select id='eventFilter' class='form-control' ng-model='eventIdFilter' ng-change='updateEventFilter(false)'>
 				<option ng-repeat='event in events' value='{{event._id}}'>{{event.name}}</option>
 			</select>
 		</div>
@@ -14,7 +14,7 @@
 		</div>
 		<label for='activityFilter' class='control-label col-sm-1'>Woche:</label>
 		<div class='col-sm-3 form-group'>
-			<select id='activityFilter' class='form-control' ng-model='activityIdFilter'>
+			<select id='activityFilter' class='form-control' ng-model='activityIdFilter' ng-change='updateActivityFilter(false)'>
 				<option ng-repeat='activity in activities' value='{{activity._id}}'>{{activity.name}}</option>
 			</select>
 		</div>
