--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -31,6 +31,7 @@
 					<a href='/#/eventInfo/{{event._id}}' class="btn btn-xlarge btn-warning" role'button'><span class='glyphicon glyphicon-search'></span></a>
 					<a href='/#/editEvent/{{event._id}}' class='btn btn-xlarge btn-info' role='button' ng-show='iSvc.isAuthorized("admin")'><span class='glyphicon glyphicon-pencil'></span></a>
 					<a href='/#/newCommitment' class='btn btn-xlarge btn-primary' role='button' ng-show='iSvc.isAuthorized("fadmin")'><span class='glyphicon glyphicon-usd'></span></a>
+					<a href='/#/' class='btn btn-xlarge btn-primary' role='button' ng-show='iSvc.isAuthorized("fadmin")'><span class='glyphicon glyphicon-road'></span></a>
 				</div>
 			</div>
 		</li>
