--- a/public/templates/commitmentEdit.html
+++ b/public/templates/commitmentEdit.html
@@ -31,7 +31,7 @@
 		<label for='amount' class='control-label col-sm-2'>Betrag</label>
 		<div class='col-sm-10'>
 		<p class='input-group'>
-			<input type="number" ng-model='amount' min="0.1" step="0.01" required></input>
+			<input type="number" ng-model='amount' value="0" min="0.1" step="0.01" required></input>
 		</p>
 		</div>
 	</div>
@@ -42,7 +42,7 @@
 			<p class='input-group'>
 				<label class='checkbox-inline'><input type='checkbox' ng-model='isPaymentDone' />Bezahlt</label>
 				<label class='checkbox-inline'><input type='checkbox' ng-model='isPaymentJDDone' />Bezahlt JD</label>
-				<label class='checkbox-inline'><input type='checkbox' ng-model='willBill' />Rechnung JD</label>
+				<label class='checkbox-inline'><input type='checkbox' ng-model='isInvoice' />Rechnung JD</label>
 			</p>
 		</div>
 	</div>
