--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -30,8 +30,8 @@
 					<a href='/#/activities/{{event._id}}' class='btn btn-xlarge btn-success' role='button'><span class='glyphicon glyphicon-triangle-right'></span></a>
 					<a href='/#/eventInfo/{{event._id}}' class="btn btn-xlarge btn-warning" role'button'><span class='glyphicon glyphicon-search'></span></a>
 					<a href='/#/editEvent/{{event._id}}' class='btn btn-xlarge btn-info' role='button' ng-show='iSvc.isAuthorized("admin")'><span class='glyphicon glyphicon-pencil'></span></a>
-					<a href='/#/newCommitment' class='btn btn-xlarge btn-primary' role='button' ng-show='iSvc.isAuthorized("fadmin")'><span class='glyphicon glyphicon-usd'></span></a>
-					<a href='/#/' class='btn btn-xlarge btn-primary' role='button' ng-show='iSvc.isAuthorized("fadmin")'><span class='glyphicon glyphicon-road'></span></a>
+					<a href='/#/newCommitment/{{event._id}}' class='btn btn-xlarge btn-primary' role='button' ng-show='iSvc.isAuthorized("fadmin")'><span class='glyphicon glyphicon-usd'></span></a>
+					<!--<a href='/#/' class='btn btn-xlarge btn-primary' role='button' ng-show='iSvc.isAuthorized("fadmin")'><span class='glyphicon glyphicon-road'></span></a>-->
 				</div>
 			</div>
 		</li>
