--- a/public/templates/commitmentEdit.html
+++ b/public/templates/commitmentEdit.html
@@ -29,9 +29,10 @@
 	<!-- AMOUNT -->
 	<div class='form-group' ng-class='{ "has-error": comForm.amount.$invalid }'>
 		<label for='amount' class='control-label col-sm-2'>Betrag</label>
-		<div class='col-sm-10'>
+		<div class='col-sm-2'>
 		<p class='input-group'>
-			<input type="number" ng-model='amount' value="0" min="0.1" step="0.01" required></input>
+				<input type="number" text-align='right' ng-model='amount' value="0" min="0.1" step="0.01" required aria-describedby="basic-addon-euro"></input>
+				<span class="input-group-addon" id="basic-addon-euro">€</span>
 		</p>
 		</div>
 	</div>
@@ -40,11 +41,11 @@
 		<label class='control-label col-sm-2'></label>
 		<div class='col-sm-10'>
 			<p class='input-group'>
-				<label class='checkbox-inline'><input type='checkbox' ng-model='isPaymentDone' />Bezahlt</label>
-				<label class='checkbox-inline'><input type='checkbox' ng-model='isPaymentJDDone' />Bezahlt JD</label>
-				<label class='checkbox-inline'><input type='checkbox' ng-model='isInvoice' />Rechnung JD</label>
+				<label class='option'><input type='radio' name='payment' ng-model-options="{allowInvalid: true}" style='margin-right:10px;margin-left:15px' ng-model='isPaymentDone' />Bezahlt</label>
+				<label class='option'><input type='radio' name='payment' ng-model-options="{allowInvalid: true}" style='margin-right:10px;margin-left:15px' ng-model='isPaymentJDDone' />Bezahlt JD</label>
+				<label class='option'><input type='radio' name='payment' ng-model-options="{allowInvalid: true}" style='margin-right:10px;margin-left:15px' ng-model='isInvoice' />Rechnung JD</label>
 			</p>
-		</div>
+		</div
 	</div>
 
 	<div class='col-sm-offset-2 col-sm-10'>
