--- a/public/templates/myCommitments.html
+++ b/public/templates/myCommitments.html
@@ -4,7 +4,8 @@
 	<table class='table table-striped table-bordered'>
 		<thead>
 		<tr>
-			<th>Programm</th>
+			<th></th>
+      <th></th>
 			<th>Name</th>
 			<th>Begründung</th>
 			<th>Datum</th>
@@ -16,30 +17,34 @@
 		<thead>
     <tbody ng-repeat='grp in commitments'>
 			<tr>
-				<td colspan="4" class="bg-info">Event</td>
-				<td align="right" class="bg-info"></td>
-				<td colspan="3" class="bg-info"></td>
+				<td colspan="4" class="bgc-orange-light"><strong>{{grp[0].name}}</strong></td>
+        <td class="bgc-orange-light"><strong>Budget:</strong></td>
+				<td align="right" class="bg-primary"><strong>{{grp[0].eventId.budget}}</strong></td>
+				<td colspan="3" class="bgc-orange-light"></td>
 			</tr>
 		  <tr ng-repeat='com in grp'>
-        <td>{{com.eventId.name}}</td>
+        <td><button class="btn glyphicon glyphicon-pencil" ng-disabled='!iSvc.isAuthorized("fadmin")' type="button" ng-click='editcommitment(com._id)'></button></td>
+  			<td><button type="button" class="btn glyphicon glyphicon-trash" ng-disabled='!iSvc.isAuthorized("admin")' ng-click='deleteCommitment(com._id)'></button></td>
 			  <td>{{com.name}}</td>
 			  <td>{{com.description}}</td>
 			  <td>{{com.date | date: 'dd/MM/yyyy'}}</td>
         <td align="right">{{com.amount}}</td>
-        <td align="center" ng-class='{"bg-success": com.isPaymentDone, "bg-info": !com.isPaymentDone}'>{{formatBool(com.isPaymentDone)}}</td>
-        <td align="center" ng-class='{"bg-success": com.isPaymentJDDone, "bg-info": !com.isPaymentJDDone}'>{{formatBool(com.isPaymentJDDone)}}</td>
-        <td align="center" ng-class='{"bg-success": com.isInvoice, "bg-info": !com.isInvoice}'>{{formatBool(com.isInvoice)}}</td>
+        <td align="center" ng-class='{"bg-info": com.isPaymentDone}'>{{formatBool(com.isPaymentDone)}}</td>
+        <td align="center" ng-class='{"bg-info": com.isPaymentJDDone}'>{{formatBool(com.isPaymentJDDone)}}</td>
+        <td align="center" ng-class='{"bg-info": com.isInvoice}'>{{formatBool(com.isInvoice)}}</td>
 		  </tr>
 			<tr>
-				<td colspan="4">Summe:</td>
-				<td align="right">xxx</td>
-				<td colspan="3"></td>
+				<td colspan="5"><strong>Summe:</strong></td>
+				<td align="right" ng-class='{"bg-success": !isOverBudget(grp), "bg-danger": isOverBudget(grp)}'><strong>{{sumGrpAll(grp)}}</strong></td>
+				<td align="right"><strong>{{sumGrpIsPaymentDone(grp)}}</strong></td>
+        <td align="right"><strong>{{sumGrpIsPaymentJDDone(grp)}}</strong></td>
+        <td align="right"><strong>{{sumGrpIsInvoice(grp)}}</strong></td>
 			</tr>
     </tbody>
 		<tfoot>
 			<tr>
-				<td colspan="4">Gesamtsumme</td>
-				<td align="right">{{sum}}</td>
+				<td colspan="5"><strong>Gesamtsumme:</strong></td>
+				<td align="right"><strong>{{sum}}</strong></td>
 				<td colspan="3"></td>
 			</tr>
 		</tfoot>
