--- a/public/templates/eventEdit.html
+++ b/public/templates/eventEdit.html
@@ -80,12 +80,21 @@
 		</p>
 		</div>
 	</div>
-	<!-- BUDGET -->
+	<!-- BUDGETBUSINESS -->
 	<div class='form-group' ng-class='{ "has-error": eventForm.budget.$invalid }'>
-		<label for='budget' class='control-label col-sm-2'>Budget</label>
+		<label for='budgetBusiness' class='control-label col-sm-2'>Sachbudget</label>
 		<div class='col-sm-10'>
 			<p class='input-group'>
-				<input type='number' ng-model='budget' min='0' step='0.01' required></input>
+				<input type='number' ng-model='budgetBusiness' min='0' step='0.01' required></input>
+			</p>
+		</div>
+	</div>
+	<!-- BUDGETFOOD -->
+	<div class='form-group' ng-class='{ "has-error": eventForm.budget.$invalid }'>
+		<label for='budgetFood' class='control-label col-sm-2'>Essensbudget</label>
+		<div class='col-sm-10'>
+			<p class='input-group'>
+				<input type='number' ng-model='budgetFood' min='0' step='0.01' required></input>
 			</p>
 		</div>
 	</div>
