--- a/public/templates/myCommitments.html
+++ b/public/templates/myCommitments.html
@@ -1,32 +1,40 @@
 <div class='container'>
 	<h2 class='text-orange'>Rechnungen</h2>
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
-	<table class='table table-striped table-bordered'>
+  <table class='table table-bordered'>
 		<thead>
-		<tr>
-			<th></th>
-      <th>Type</th>
-			<th>Name</th>
-			<th>Begründung</th>
-			<th>Datum</th>
-			<th>Betrag</th>
-			<th>Bezahlt</th>
-			<th>Bezahlt JD</th>
-			<th>Rechnung JD</th>
-			<th>Benutzer</th>
-		</tr>
-		<thead>
-    <tbody ng-repeat='grp in commitments'>
 			<tr>
-				<td colspan="4" class="bg-warning"><i><strong>{{grp[0].eventId.location}} - {{grp[0].eventId.name}}</strong></i></td>
+				<th></th>
+	      <th></th>
+				<th>Name</th>
+				<th>Begründung</th>
+				<th>Datum</th>
+				<th>Betrag</th>
+				<th>Bezahlt</th>
+				<th>Bezahlt JD</th>
+				<th>Rechnung JD</th>
+				<th>Benutzer</th>
+			</tr>
+		</thead>
+		<tbody ng-repeat='grp in commitments'>
+			<tr>
+				<th colspan="4" class="bg-warning"><i><strong>{{getEventName(grp)}}</strong></i></th>
+        <th class="bg-warning"><strong>Gesamtbudget:</strong></th>
+				<th align="right" class="bg-primary"><strong>{{calcBudgetSum(grp)*1}}</strong></th>
+				<th colspan="4" class="bg-warning"></th>
+			</tr>
+			<!-- HEAD BUSINESS -->
+			<tr>
+				<td colspan="2"><span class="caret"></span></td>
+				<td colspan="2" class="bg-warning"><i><strong>Sachkosten</strong></i></td>
         <td class="bg-warning"><strong>Budget:</strong></td>
-				<td align="right" class="bg-primary"><strong>{{grp[0].eventId.budgetBusiness}}</strong></td>
+				<td align="right" class="bg-primary"><strong>{{grp['business'][0].eventId.budgetBusiness}}</strong></td>
 				<td colspan="4" class="bg-warning"></td>
 			</tr>
-		  <tr ng-repeat='com in grp["business"]'>
-        <td><button class="btn glyphicon glyphicon-pencil" ng-disabled='!iSvc.isAuthorized("fadmin")' type="button" ng-click='editCommitment(com._id)'></button></td>
+			<!-- MAIN BUSINESS -->
+			<tr ng-repeat='com in grp["business"]' ng-class='{"tbl_hide": com.isHidden, "tbl_show": !com.isHidden}'>
+				<td><button class="btn glyphicon glyphicon-pencil" ng-disabled='!iSvc.isAuthorized("fadmin")' type="button" ng-click='editCommitment(com._id)'></button></td>
   			<td><button type="button" class="btn glyphicon glyphicon-trash" ng-disabled='!iSvc.isAuthorized("admin")' ng-click='deleteCommitment(com._id)'></button></td>
-				<td>{{com.type}}</td>
 				<td>{{com.name}}</td>
 			  <td>{{com.description}}</td>
 			  <td>{{com.date | date: 'dd/MM/yyyy'}}</td>
@@ -35,16 +43,54 @@
         <td align="center" ng-class='{"bg-info": com.isPaymentJDDone}'>{{formatBool(com.isPaymentJDDone)}}</td>
         <td align="center" ng-class='{"bg-info": com.isInvoice}'>{{formatBool(com.isInvoice)}}</td>
 				<td>{{com.userId.firstName}} {{com.userId.lastName}}</td>
-		  </tr>
+			</tr>
+			<!-- FOOTER BUSINESS -->
 			<tr>
-				<td colspan="5"><strong>Summe:</strong></td>
-				<td align="right" ng-class='{"bg-success": !isOverBudget(grp), "bg-danger": isOverBudget(grp)}'><strong>{{sumGrpAll(grp)}}</strong></td>
-				<td align="right"><strong>{{sumGrpIsPaymentDone(grp)}}</strong></td>
-        <td align="right"><strong>{{sumGrpIsPaymentJDDone(grp)}}</strong></td>
-        <td align="right"><strong>{{sumGrpIsInvoice(grp)}}</strong></td>
+				<td colspan="2"></td>
+				<td colspan="3"><strong>Summe:</strong></td>
+				<td align="right" ng-class='{"bg-success": !isOverBudget(grp["business"], "business"), "bg-danger": isOverBudget(grp["business"], "business")}'><strong>{{sumGrpAll(grp["business"])}}</strong></td>
+				<td align="right"><strong>{{sumGrpIsPaymentDone(grp["business"])}}</strong></td>
+        <td align="right"><strong>{{sumGrpIsPaymentJDDone(grp["business"])}}</strong></td>
+        <td align="right"><strong>{{sumGrpIsInvoice(grp["business"])}}</strong></td>
 				<td></td>
 			</tr>
-    </tbody>
+			<!-- HEADER FOOD -->
+			<tr>
+				<td colspan="2"><span class="caret"></span></td>
+				<td colspan="2" class="bg-warning"><i><strong>Essenskosten</strong></i></td>
+        <td class="bg-warning"><strong>Budget:</strong></td>
+				<td align="right" class="bg-primary"><strong>{{grp['food'][0].eventId.budgetFood}}</strong></td>
+				<td colspan="4" class="bg-warning"></td>
+			</tr>
+			<!-- MAIN FOOD -->
+			<tr ng-repeat='com in grp["food"]' ng-class='{"tbl_hide": com.isHidden, "tbl_show": !com.isHidden}'>
+				<td><button class="btn glyphicon glyphicon-pencil" ng-disabled='!iSvc.isAuthorized("fadmin")' type="button" ng-click='editCommitment(com._id)'></button></td>
+  			<td><button type="button" class="btn glyphicon glyphicon-trash" ng-disabled='!iSvc.isAuthorized("admin")' ng-click='deleteCommitment(com._id)'></button></td>
+				<td>{{com.name}}</td>
+			  <td>{{com.description}}</td>
+			  <td>{{com.date | date: 'dd/MM/yyyy'}}</td>
+        <td align="right">{{com.amount}}</td>
+        <td align="center" ng-class='{"bg-info": com.isPaymentDone}'>{{formatBool(com.isPaymentDone)}}</td>
+        <td align="center" ng-class='{"bg-info": com.isPaymentJDDone}'>{{formatBool(com.isPaymentJDDone)}}</td>
+        <td align="center" ng-class='{"bg-info": com.isInvoice}'>{{formatBool(com.isInvoice)}}</td>
+				<td>{{com.userId.firstName}} {{com.userId.lastName}}</td>
+			</tr>
+			<tr>
+				<td colspan="2"></td>
+				<td colspan="3"><strong>Summe:</strong></td>
+				<td align="right" ng-class='{"bg-success": !isOverBudget(grp["food"], "food"), "bg-danger": isOverBudget(grp["food"], "food")}'><strong>{{sumGrpAll(grp["food"])}}</strong></td>
+				<td align="right"><strong>{{sumGrpIsPaymentDone(grp["food"])}}</strong></td>
+        <td align="right"><strong>{{sumGrpIsPaymentJDDone(grp["food"])}}</strong></td>
+        <td align="right"><strong>{{sumGrpIsInvoice(grp["food"])}}</strong></td>
+				<td></td>
+			</tr>
+			<!-- FOOTER FOOD -->
+			<tr>
+				<td colspan="5"><strong>Summe:</strong></td>
+				<td align="right"><strong>{{sumGrpTypes(grp)}}</strong></td>
+				<td colspan="4"></td>
+			</tr>
+		</tbody>
 		<tfoot>
 			<tr>
 				<td colspan="5"><strong>Gesamtsumme:</strong></td>
