--- a/public/templates/myCommitments.html
+++ b/public/templates/myCommitments.html
@@ -75,6 +75,7 @@
         <td align="center" ng-class='{"bg-info": com.isInvoice}'>{{formatBool(com.isInvoice)}}</td>
 				<td>{{com.userId.firstName}} {{com.userId.lastName}}</td>
 			</tr>
+      <!-- FOOTER FOOD -->
 			<tr>
 				<td colspan="2"></td>
 				<td colspan="3"><strong>Summe:</strong></td>
@@ -84,8 +85,38 @@
         <td align="right"><strong>{{sumGrpIsInvoice(grp["food"])}}</strong></td>
 				<td></td>
 			</tr>
-			<!-- FOOTER FOOD -->
+      <!-- HEAD TRAVEL -->
 			<tr>
+				<td colspan="2"><button class="btn btn-default glyphicon glyphicon-resize-full" ng-click="toggleVisibility(grp['travel'])"></button></td>
+				<td colspan="2" class="bg-warning"><i><strong>Fahrtkosten</strong></i></td>
+        <td class="bg-warning"></td>
+				<td align="right" class="bg-primary"></td>
+				<td colspan="4" class="bg-warning"></td>
+			</tr>
+			<!-- MAIN TRAVEL -->
+			<tr ng-repeat='com in grp["travel"]' ng-class='{"tbl_hide": com.isHidden, "tbl_show": !com.isHidden}'>
+				<td><button class="btn glyphicon glyphicon-pencil" ng-disabled='!iSvc.isAuthorized("fadmin")' type="button" ng-click='editTravelExpenses(com._id)'></button></td>
+  			<td><button type="button" class="btn glyphicon glyphicon-trash" ng-disabled='!iSvc.isAuthorized("admin")' ng-click='deleteCommitment(com._id)'></button></td>
+				<td>{{com.name}}</td>
+			  <td>{{com.description}}</td>
+			  <td>{{com.date | date: 'dd/MM/yyyy'}}</td>
+        <td align="right">{{com.amount}}</td>
+        <td align="center"></td>
+        <td align="center"></td>
+        <td align="center"></td>
+				<td>{{com.userId.firstName}} {{com.userId.lastName}}</td>
+			</tr>
+			<!-- FOOTER TRAVEL -->
+			<tr>
+				<td colspan="2"></td>
+				<td colspan="3"><strong>Summe:</strong></td>
+				<td align="right"><strong>{{sumGrpAll(grp["travel"])}}</strong></td>
+				<td align="right"></td>
+        <td align="right"></td>
+        <td align="right"></td>
+				<td></td>
+			</tr>
+      <tr>
 				<td colspan="5"><strong>Summe:</strong></td>
 				<td align="right"><strong>{{sumGrpTypes(grp)}}</strong></td>
 				<td colspan="4"></td>
