--- a/public/templates/commitmentEdit.html
+++ b/public/templates/commitmentEdit.html
@@ -5,16 +5,16 @@
 
 	<!-- NAME -->
 	<div class='form-group' ng-class='{ "has-error": comForm.name.$invalid }'>
-    	<label for='name' class='control-label col-sm-2'>Name</label>
+    	<label for='name' class='control-label col-sm-2'>Firma</label>
 		<div class='col-sm-10'>
 			<input name='name' type='text' ng-model='name' required class='form-control'></input>
 		</div>
 	</div>
 	<!-- DESCRIPTION -->
 	<div class='form-group' ng-class='{ "has-error": comForm.description.$invalid }'>
-		<label for='description' class='control-label col-sm-2'>Begründung</label>
+		<label for='description' class='control-label col-sm-2'>Hinweis</label>
 		<div class='col-sm-10'>
-			<textarea name='description' type='text' ng-model='description' class='form-control' rows='3' placehoder='Begründung eintragen' required ></textarea>
+			<textarea name='description' type='text' ng-model='description' class='form-control' rows='3' placehoder='Hinweis eintragen' ></textarea>
 		</div>
 	</div>
 	<!-- DATE -->
@@ -22,7 +22,7 @@
 		<label for='date' class='control-label col-sm-2'>Datum</label>
 		<div class='col-sm-10'>
 		<p class='input-group'>
-			<ng-datepicker ng-model='date' view-format="DD.MM.YYYY" locale='de' required></ng-datepicker>
+			<ng-datepicker ng-model='date' view-format="DD.MM.YYYY" locale='de'></ng-datepicker>
 		</p>
 		</div>
 	</div>
@@ -31,7 +31,7 @@
 		<label for='type' class='control-label col-sm-2'>Typ</label>
 		<div class='col-sm-10'>
 		<p class='input-group'>
-			<select name='type' class='sel-base form-control' ng-model='type'>
+			<select name='type' class='sel-base form-control' ng-model='type' required>
 				<option value='business'>Sachkosten</option>
 				<option value='food'>Essen</option>
 			</select>
@@ -53,9 +53,9 @@
 		<label class='control-label col-sm-2'></label>
 		<div class='col-sm-10'>
 			<p class='input-group'>
-				<label class='checkbox-inline'><input type='checkbox' name='payment' ng-model='isPaymentDone' />Bezahlt</label>
-				<label class='checkbox-inline'><input type='checkbox' name='payment' ng-model='isPaymentJDDone' />Bezahlt JD</label>
-				<label class='checkbox-inline'><input type='checkbox' name='payment' ng-model='isInvoice' />Rechnung JD</label>
+				<label class='checkbox-inline'><input type='checkbox' name='payment' ng-model='isPaymentDone' />selbst bezahlt</label>
+				<label class='checkbox-inline'><input type='checkbox' name='payment' ng-model='isPaymentJDDone' />bezahlt mit JD Bankomat</label>
+				<label class='checkbox-inline'><input type='checkbox' name='payment' ng-model='isInvoice' />Rechnung an JD</label>
 			</p>
 		</div
 	</div>
